# DebugFlow

./: .gitignore  .replit  README.md  license  pyproject.toml  replit.md  requirements.txt  setup.py  test.py  todo.md
.agents/: agent_assets_metadata.toml
.local/secondary_skills/ad-creative/: .fingerprint
.local/secondary_skills/ai-recruiter/: .fingerprint
.local/secondary_skills/ai-sdr/: .fingerprint
.local/secondary_skills/ai-secretary/: .fingerprint
.local/secondary_skills/branding-generator/: .fingerprint
.local/secondary_skills/competitive-analysis/: .fingerprint
.local/secondary_skills/content-machine/: .fingerprint
.local/secondary_skills/deep-research/: .fingerprint
.local/secondary_skills/design-thinker/: .fingerprint
.local/secondary_skills/excel-generator/: .fingerprint
.local/secondary_skills/file-converter/: .fingerprint
.local/secondary_skills/flashcard-generator/: .fingerprint
.local/secondary_skills/geo/: .fingerprint
.local/secondary_skills/github-solution-finder/: .fingerprint
.local/secondary_skills/infographic-builder/: .fingerprint
.local/secondary_skills/insurance-optimizer/: .fingerprint
.local/secondary_skills/interview-prep/: .fingerprint
.local/secondary_skills/invoice-generator/: .fingerprint
.local/secondary_skills/legal-contract/: .fingerprint
.local/secondary_skills/meal-planner/: .fingerprint
.local/secondary_skills/personal-shopper/: .fingerprint
.local/secondary_skills/photo-editor/: .fingerprint
.local/secondary_skills/podcast-generator/: .fingerprint
.local/secondary_skills/podcast-marketing/: .fingerprint
.local/secondary_skills/product-manager/: .fingerprint
.local/secondary_skills/programmatic-seo/: .fingerprint
.local/secondary_skills/real-estate-analyzer/: .fingerprint
.local/secondary_skills/recipe-creator/: .fingerprint
.local/secondary_skills/recreate-screenshot/: .fingerprint
.local/secondary_skills/replit-migration-guardrails/: .fingerprint
.local/secondary_skills/resume-maker/: .fingerprint
.local/secondary_skills/seo-auditor/: .fingerprint
.local/secondary_skills/skill-creator/: .fingerprint
.local/secondary_skills/skill-finder/: .fingerprint
.local/secondary_skills/stock-analyzer/: .fingerprint
.local/secondary_skills/storyboard/: .fingerprint
.local/secondary_skills/supplier-research/: .fingerprint
.local/secondary_skills/tax-reviewer/: .fingerprint
.local/secondary_skills/travel-assistant/: .fingerprint
.local/secondary_skills/video-editing/: .fingerprint
.local/secondary_skills/website-cloning/: .fingerprint
.local/skills/agent-inbox/: .fingerprint
.local/skills/artifacts/: .fingerprint
.local/skills/canvas/: .fingerprint
.local/skills/database/: .fingerprint
.local/skills/delegation/: .fingerprint
.local/skills/deployment/: .fingerprint
.local/skills/design/: .fingerprint
.local/skills/design-exploration/: .fingerprint
.local/skills/diagnostics/: .fingerprint
.local/skills/environment-secrets/: .fingerprint
.local/skills/expo/: .fingerprint
.local/skills/external_apis/: .fingerprint
.local/skills/follow-up-tasks/: .fingerprint
.local/skills/image-search/: .fingerprint
.local/skills/integrations/: .fingerprint
.local/skills/media-generation/: .fingerprint
.local/skills/mockup-extract/: .fingerprint
.local/skills/mockup-graduate/: .fingerprint
.local/skills/mockup-sandbox/: .fingerprint
.local/skills/package-management/: .fingerprint
.local/skills/post_merge_setup/: .fingerprint
.local/skills/project_tasks/: .fingerprint
.local/skills/query-integration-data/: .fingerprint
.local/skills/react-vite/: .fingerprint
.local/skills/remove-image-background/: .fingerprint
.local/skills/repl_setup/: .fingerprint
.local/skills/replit-docs/: .fingerprint
.local/skills/revenuecat/: .fingerprint
.local/skills/security_scan/: .fingerprint
.local/skills/skill-authoring/: .fingerprint
.local/skills/slides/: .fingerprint
.local/skills/stripe/: .fingerprint
.local/skills/threat_modeling/: .fingerprint
.local/skills/validation/: .fingerprint
.local/skills/video-js/: .fingerprint
.local/skills/web-search/: .fingerprint
.local/skills/workflows/: .fingerprint
scripts/: build_demo_gifs.py  run.py
src/debugflow/: __init__.py  animation.py  flow_bridge.py  flow_engine.py  flow_hud.py  flow_service.py  logger_system.py  spinelink.py
src/debugflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test.py  test_chord_watcher.py
v1/: .gitignore  README.md  pyproject.toml
v1/context/: cache.json  project_summary.json
v1/scripts/: build_demo_gifs.py
(+7 files in other folders)
